--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
@@ -20,6 +21,7 @@
     "express-session": "^1.17.3",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.1",
+    "method-override": "^3.0.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
     "passport": "^0.6.0",
